--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,17 +14,17 @@
             box-shadow: 0 4px 10px rgba(0, 0, 255, 0.1);
         }
         .btn-primary {
-            background-color: #0d6efd;
+            background-color: #198754;
             border: none;
         }
         .btn-primary:hover {
-            background-color: #084298;
+            background-color: #036303;
         }
         h2 {
-            color: #0d6efd;
+            color: #198754;
         }
         a {
-            color: #0d6efd;
+            color: #198754;
             text-decoration: none;
         }
         a:hover {
