--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -8,12 +8,11 @@
 
 </head>
 <body>
-<div th:insert="~{sidebar.html}"></div>
-<div class="container">
-    <h5>Xin chào <span th:text="${user.email}">user@example.com</span>!</h5>
-    <form action="/logout" method="post">
-        <button class="signout button" type="submit">Đăng xuất</button>
-    </form>
-</div>
+    <div class="sidebar">
+        <h2>TO DO WEB</h2>
+        <a href="/">Trang chủ</a>
+        <a href="/projects">Quản lý dự án</a>
+        <a href="#">Tài khoản</a>
+    </div>
 </body>
 </html>
