Implement feature task4 for to-do list

--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <div class="sidebar">
+    <div class="sidebar" th:fragment="sidebar">
         <h2>TO DO WEB</h2>
         <a href="/">Trang chủ</a>
         <a href="/projects">Quản lý dự án</a>
