--- a/src/main/resources/templates/task-list.html
+++ b/src/main/resources/templates/task-list.html
@@ -26,6 +26,7 @@
                 </form>
             </td>
             <td>
+                <a th:href="@{'/tasks/' + ${task.id}}" class="btn btn-info btn-sm me-1">Xem</a>
                 <a href="#"
                    class="btn btn-warning btn-sm me-1"
                    th:attr="data-id=${task.id}, data-title=${task.title}, data-description=${task.description}, data-project=${project.id}"
