--- a/src/main/resources/templates/create-task-form.html
+++ b/src/main/resources/templates/create-task-form.html
@@ -24,6 +24,10 @@
                             <label class="form-label">Mô tả:</label>
                             <textarea class="form-control" name="description" placeholder="Nhập mô tả công việc" rows="4" required></textarea>
                         </div>
+                        <div class="mb-3">
+                            <label class="form-label">Hạn chót (Deadline):</label>
+                            <input type="date" class="form-control" name="deadline" required>
+                        </div>
                     </div>
 
                     <div class="modal-footer">
