--- a/src/main/resources/templates/task-edit.html
+++ b/src/main/resources/templates/task-edit.html
@@ -9,6 +9,10 @@
                 <label class="form-label">Mô tả:</label>
                 <textarea class="form-control" name="description" id="editDescription" rows="4" required></textarea>
             </div>
+            <div class="mb-3">
+                <label class="form-label">Hạn chót(deadline)</label>
+                <input type="date" class="form-control" name="deadline" id="editDeadline" required>
+            </div>
         </div>
 
         <div class="modal-footer">
