--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-<div th:replace="~{index.html}"></div>
+<div class="box-index" th:include="~{index.html}"></div>
 <div class="content">
     <div class="content-header">
         <h1>Báo cáo thống kê</h1>
