--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chính</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <!DOCTYPE html>
+    <html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <title>Trang chính</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" th:href="@{/css/style.css}">
 
-</head>
-<body>
-    <div class="sidebar" th:fragment="sidebar">
-        <h2>TO DO WEB</h2>
-        <a th:href="@{/}">Trang chủ</a>
-        <a th:href="@{/projects}">Quản lý dự án</a>
-        <hr style="border-color: rgba(255,255,255,0.2); margin: 10px 0;">
-        <a th:href="@{/tasks/today}">Hôm nay</a>
-        <a th:href="@{/tasks/upcoming}">Sắp tới</a>
-        <a th:href="@{/report}">Báo cáo</a>
-        <hr style="border-color: rgba(255,255,255,0.2); margin: 10px 0;">
-        <a href="#">Tài khoản</a>
-    </div>
-</body>
-</html>
+    </head>
+    <body>
+        <div class="sidebar" th:fragment="sidebar">
+            <h2>TO DO WEB</h2>
+            <a th:href="@{/}">Trang chủ</a>
+            <a th:href="@{/projects}">Quản lý dự án</a>
+            <hr style="border-color: rgba(255,255,255,0.2); margin: 10px 0;">
+            <a th:href="@{/tasks/today}">Hôm nay</a>
+            <a th:href="@{/tasks/upcoming}">Sắp tới</a>
+            <a th:href="@{/report}">Báo cáo</a>
+            <hr style="border-color: rgba(255,255,255,0.2); margin: 10px 0;">
+            <a th:href="@{/user/profile}">Tài khoản</a>
+        </div>
+    </body>
+    </html>
