--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div class="box-index" th:include="~{index.html}"></div>
+<div th:replace="~{sidebar :: sidebar}"></div>
 <div class="content">
     <div class="content-header">
         <h1>My Projects</h1>
