--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -65,10 +65,10 @@
                 <input type="text" name="name" th:value="${user.name}">
             </div>
 
-            <div class="form-group">
-                <label>Avatar mới</label>
-                <input type="file" name="avatarFile">
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label>Avatar mới</label>-->
+<!--                <input type="file" name="avatarFile">-->
+<!--            </div>-->
 
             <div class="form-actions">
                 <button class="btn-primary" type="submit">Lưu thay đổi</button>
