--- a/src/main/resources/templates/project-tasks.html
+++ b/src/main/resources/templates/project-tasks.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-<div class="box-index" th:include="~{index.html}"></div>
+<div th:replace="~{sidebar :: sidebar}"></div>
 <div class="content">
     <div class="content-header">
         <h1>Project Detail</h1>
