--- a/src/main/resources/templates/tasks-filtered.html
+++ b/src/main/resources/templates/tasks-filtered.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/task.css}">
 </head>
 <body>
-<div th:replace="~{index.html}"></div>
+<div th:replace="~{sidebar :: sidebar}"></div>
 <div class="content">
     <div class="content-header">
         <h1 th:text="${pageTitle}">Tasks</h1>
